--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/backgroundforquizapp"
+    android:background="@drawable/gradient"
     tools:context=".activities.MainActivity">
 
     <TextView
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@color/purple_200"
+                android:background="#AE4D03"
                 android:text="@string/start"
                 android:textColor="@color/white"
                 android:textSize="18sp"
