--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundforquizapp"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="20dp"
@@ -55,6 +55,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@android:color/secondary_text_dark"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:text="@string/your_score_is_9_out_of_10"/>
 
 
